samples/_failures_safe/1761792649_4e28ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98b82252.c: In function ‘main’:
./samples/SAFE/__tmp_98b82252.c:144:13: error: expected ‘:’ or ‘...’ at end of input
  144 |             case STATE_IDLE
      |             ^~~~
./samples/SAFE/__tmp_98b82252.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98b82252.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_98b82252.c:144:13: error: expected declaration or statement at end of input
